WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135355
Should not export symbols for base64Encode inline adapter methods
https://bugs.webkit.org/show_bug.cgi?id=135355
Summary
Should not export symbols for base64Encode inline adapter methods
Brian Burg
Reported
2014-07-28 14:36:16 PDT
(separate bug for root cause of 32bit build break) Looking at Base64.h, there are 4 adapters and 2 actual implementations, but all are marked WTF_EXPORT_PRIVATE. Since EncodedValue.h is included multiple places, it will trigger weak symbol problems that seem to have been latent in that header.
Attachments
Add attachment
proposed patch, testcase, etc.
Brian Burg
Comment 1
2014-07-28 14:47:51 PDT
Committed
r171696
: <
http://trac.webkit.org/changeset/171696
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug