Should not export symbols for base64Encode inline adapter methods https://bugs.webkit.org/show_bug.cgi?id=135355

Unreviewed build fix.

Fixes the build break introduced by r171682, where a base64Encode
inline adapter method was used in another header, thus creating
multiple definitions of it (and problems with with weak symbols).

* wtf/text/Base64.h: Remove WTF_EXPORT_PRIVATE for inlined methods.

Canonical link: https://commits.webkit.org/153247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171696 268f45cc-cd09-0410-ab3c-d52691b4dbfc